Fixed page flickering on navigation and small performance improvements

--- a/src/assets/styles/_docs.scss
+++ b/src/assets/styles/_docs.scss
@@ -7,6 +7,7 @@
   }
 
   aside.docs-menu {
+    flex: 0 0 10rem;
     padding: 2rem 1rem;
     min-width: 10rem;
 
